--- a/PizzeriaMVC/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/PizzeriaMVC/Areas/Identity/Pages/Account/Logout.cshtml
@@ -9,7 +9,8 @@
     @{
         if (User.Identity?.IsAuthenticated ?? false)
         {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" method="post">
+                <input type="hidden" name="returnUrl" value="@Model.returnUrl" />
                 <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
             </form>
         }
