- IdentityUser customization (cf. https://learn.microsoft.com/en-us/aspnet/core/security/authentication/customize-identity-model?view=aspnetcore-7.0)

--- a/PizzeriaMVC/Views/Shared/_LoginPartial.cshtml
+++ b/PizzeriaMVC/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<PizzaUser> SignInManager
+@inject UserManager<PizzaUser> UserManager
 
 <ul class="navbar-nav ms-auto">
 @if (SignInManager.IsSignedIn(User))
